--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,27 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: calc(var(--spacing) * 4);
+
+  @media screen and (min-width: 600px) {
+    & {
+      flex-direction: row;
+      justify-content: center;
+    }
+  }
 }
 
 .form {
-  max-width: 400px;
+  width: 100%;
   padding: calc(var(--spacing) * 4);
   border: 1px solid grey;
   border-radius: 12px;
+}
+
+.form-container {
+  width: 100%;
+  max-width: 400px;
 }
 
 .fieldset {
@@ -23,4 +35,25 @@
 
 .form-control {
   margin-bottom: calc(var(--spacing) * 3);
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: calc(var(--spacing) * 3) calc(var(--spacing) * 6);
+  min-width: 100px;
+  border-radius: 4px;
+  background: var(--primary);
+  font-size: 1rem;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.1s;
+  width: 150px;
+  margin: 0 auto;
+  &:hover {
+    background: var(--primary-darker);
+  }
 }
