--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: calc(var(--spacing) * 4);
+  padding: calc(var(--spacing) * 10);
 
   @media screen and (min-width: 600px) {
     & {
@@ -56,4 +57,10 @@
   &:hover {
     background: var(--primary-darker);
   }
+}
+
+.title {
+  text-align: center;
+  margin-bottom: calc(var(--spacing) * 2);
+  font-size: 1.7rem;
 }
