--- a/src/components/ui/Input/Input.scss
+++ b/src/components/ui/Input/Input.scss
@@ -70,6 +70,9 @@
     top: 50%;
     right: 16px;
     transform: translate3d(0, -50%, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &-HelperText {
