--- a/src/components/ui/ComboBox/ComboBox.scss
+++ b/src/components/ui/ComboBox/ComboBox.scss
@@ -14,11 +14,11 @@
 
 .Combobox-Container {
   width: 100%;
-  border: 1px solid grey;
-  border-radius: 12px;
-  box-shadow: 0px 0px 2px var(--primary);
   overflow: auto;
-  max-height: 200px;
+  // border: 1px solid grey;
+  // border-radius: 12px;
+  // box-shadow: 0px 0px 2px var(--primary);
+  // max-height: 200px;
 }
 .Combobox-List {
   background-color: var(--bg);
