--- a/src/components/ui/ComboBox/Dropdown/Dropdown.scss
+++ b/src/components/ui/ComboBox/Dropdown/Dropdown.scss
@@ -3,18 +3,19 @@
     height: 100vh;
     width: 100vw;
     background-color: transparent;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
   &-content {
-    position: absolute;
+    position: sticky;
     z-index: 2000;
+    border: 1px solid grey;
+    border-radius: 12px;
+    box-shadow: 0px 0px 2px var(--primary);
+    max-height: 200px;
+    overflow: auto;
   }
 }
