--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 $primary: #a855f7;
 $error: #b91c1c;
 $bg: #fff;
+$border: #475569;
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -13,6 +14,7 @@ $bg: #fff;
   --primary: #{$primary};
   --error: #{$error};
   --bg: #{$bg};
+  --border: #{$border};
 
   --primary-lighter: #{color.mix($primary, white, 10%)};
   --primary-darker: #{color.mix($primary, black, 90%)};
