--- a/src/components/ui/ComboBox/Dropdown/Dropdown.scss
+++ b/src/components/ui/ComboBox/Dropdown/Dropdown.scss
@@ -2,20 +2,24 @@
   &-overlay {
     height: 100vh;
     width: 100vw;
-    background-color: transparent;
+
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
+
+    background-color: transparent;
   }
 
   &-content {
-    position: sticky;
-    z-index: 2000;
-    border: 1px solid grey;
-    border-radius: 12px;
-    box-shadow: 0px 0px 2px var(--primary);
     max-height: 200px;
     overflow: auto;
+
+    position: sticky;
+    z-index: 2000;
+
+    border: 1px solid var(--border);
+    border-radius: 12px;
+    box-shadow: 0px 0px 2px var(--primary);
   }
 }
