--- a/src/components/ui/Input/Input.scss
+++ b/src/components/ui/Input/Input.scss
@@ -33,14 +33,13 @@
     width: 100%;
     height: 44px;
     padding: var(--spacing) calc(var(--spacing) * 2);
+    padding-right: calc(var(--spacing) * 9);
     outline: none;
-    border: 1px solid grey;
-
+    border: 1px solid var(--border);
     border-radius: 8px;
 
     font-size: 1rem;
     text-overflow: ellipsis;
-    padding-right: 36px;
 
     &:focus,
     &:active {
@@ -70,6 +69,7 @@
     top: 50%;
     right: 16px;
     transform: translate3d(0, -50%, 0);
+
     display: flex;
     align-items: center;
     justify-content: center;
