--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,12 @@
   width: 100%;
   padding: calc(var(--spacing) * 4);
   border: 1px solid var(--border);
-  border-radius: 12px;
+  border-radius: var(--brs);
 }
 
 .form-container {
   width: 100%;
-  max-width: 400px;
+  max-width: 600px;
 }
 
 .fieldset {
@@ -42,18 +42,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: calc(var(--spacing) * 3) calc(var(--spacing) * 6);
-  min-width: 100px;
-  border-radius: 4px;
-  background: var(--primary);
-  font-size: 1rem;
-  color: white;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.1s;
+
   width: 150px;
   margin: 0 auto;
+  padding: calc(var(--spacing) * 3) calc(var(--spacing) * 6);
+  min-width: 100px;
+  border-radius: calc(var(--brs) * 0.5);
+  border: none;
+  outline: none;
+
+  background: var(--primary);
+  cursor: pointer;
+
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: white;
+  transition: 0.1s;
+
   &:hover {
     background: var(--primary-darker);
   }
@@ -61,6 +67,17 @@
 
 .title {
   text-align: center;
-  margin-bottom: calc(var(--spacing) * 2);
-  font-size: 1.7rem;
+  margin-bottom: calc(var(--spacing) * 4);
+  font-size: 1.3rem;
+}
+
+@media screen and (min-width: 746px) {
+  .container {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .title {
+    font-size: 1.7rem;
+  }
 }
