--- a/src/components/ui/ComboBox/Dropdown/Dropdown.scss
+++ b/src/components/ui/ComboBox/Dropdown/Dropdown.scss
@@ -19,7 +19,7 @@
     z-index: 2000;
 
     border: 1px solid var(--border);
-    border-radius: 12px;
+    border-radius: var(--brs);
     box-shadow: 0px 0px 2px var(--primary);
   }
 }
